# drone_parachute

./: .gitignore  CMakeLists.txt
include/: command_parser.h  spi.h
src/: command_parser.cpp  main.cpp  spi.cpp
